--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@vicons/ionicons5": "^0.12.0",
+    "@wangeditor/editor": "^5.1.22",
+    "@wangeditor/editor-for-vue": "^5.1.12",
+    "axios": "^1.1.3",
     "pinia": "^2.0.22",
     "vue": "^3.2.37",
     "vue-router": "4"
@@ -17,6 +20,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
     "naive-ui": "^2.33.3",
+    "qs": "^6.11.0",
     "sass": "^1.55.0",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.7",
